@@ -49,6 +49,7 @@ require "braintree/credit_card_verification_gateway"
 require "braintree/credit_card_verification_search"
 require "braintree/customer"
 require "braintree/customer_gateway"
+require "braintree/granted_payment_instrument_update"
 require "braintree/customer_search"
 require "braintree/descriptor"
 require "braintree/digest"
