@@ -2,6 +2,7 @@
 * Add `options` -> `paypal` -> `description` for creating and updating subscriptions
 * Add support for upgrading a PayPal future payment refresh token to a billing agreement
 * Fix spec to expect PayPal transaction to settle immediately after successful capture
+* Add GrantedPaymentInstrumentUpdate webhook support
 
 == 2.78.0
 * Support `eci_indicator` for Transaction#sale with raw Apple Pay parameters
